# tauri-linux

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: arm.yml  armv.yml  main.yml  rust.yml  rust2.yml  test-rasberry.yml
environment/: apt_packages.txt
flows/: arm.yml
src/: App.config.tsx  App.scss  App.test.tsx  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: CirclePoint.tsx  DateGroup.tsx  DeviceCard.tsx  DeviceCarousel.tsx  Header.tsx  OldCheckout.tsx  PoweredByKashingLogo.tsx  ProductCard.tsx  ProductDescriptorColumn.tsx  ProductDetail.tsx  SideCard.tsx  StatsTable.tsx  TextBox.tsx  TieredProductCard.tsx
src/components/CheckAnimation/: CheckAnimation.module.scss  CheckAnimation.test.tsx  CheckAnimation.tsx
src/components/FailAnimation/: FailAnimation.module.scss  FailAnimation.test.tsx  FailAnimation.tsx
src/components/PaymentView/: PaymentView.module.scss  PaymentView.test.tsx  PaymentView.tsx
src/components/ProductRow/: ProductRow.module.scss  ProductRow.test.tsx  ProductRow.tsx
src/contexts/: KioskContext.tsx  PaymentContext.tsx
src/hooks/: useSwipeToRoute.tsx
src/models/: KioskStats.tsx  MessageCommand.tsx  Product.tsx
src/pages/: Page.module.scss
src/pages/AboutPage/: AboutPage.test.tsx  AboutPage.tsx
src/pages/ActionRequiredPage/: ActionRequiredPage.lazy.tsx  ActionRequiredPage.module.scss  ActionRequiredPage.test.tsx  ActionRequiredPage.tsx
src/pages/CheckoutPage/: CheckoutPage.lazy.tsx  CheckoutPage.module.scss  CheckoutPage.test.tsx  CheckoutPage.tsx
src/pages/DeclinedPage/: DeclinedPage.tsx  (+3 more)
src/routes/: index.tsx
src/services/: KioskInfo.tsx
src/utils/: Array.tsx  Money.tsx  WSClient.tsx
(+35 files in other folders)
